[gd_scene load_steps=10 format=3 uid="uid://dwi36con8k2mh"]

[ext_resource type="Script" path="res://scripts/Roam_and_Agro.gd" id="1_t3ai5"]
[ext_resource type="Texture2D" uid="uid://ug86jlvkhv6y" path="res://characters/MinionGoober.png" id="2_s72h6"]
[ext_resource type="Script" path="res://scripts/agro.gd" id="3_c58pl"]
[ext_resource type="PackedScene" uid="uid://vs42xtjn3by8" path="res://scenes/RoamArea.tscn" id="4_ha8xt"]
[ext_resource type="Script" path="res://scripts/AttackBox.gd" id="5_75jhx"]
[ext_resource type="PackedScene" uid="uid://cn84nfyv5huew" path="res://scenes/DamageText.tscn" id="6_4lx6o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7w87"]
size = Vector2(214, 278)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2r8xn"]
size = Vector2(1844, 1679)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3opb"]
size = Vector2(399, 421)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 512
collision_mask = 271
script = ExtResource("1_t3ai5")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.75, 0.763)
texture = ExtResource("2_s72h6")

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(-16, -2)
shape = SubResource("RectangleShape2D_e7w87")

[node name="vision" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("3_c58pl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_2r8xn")

[node name="RoamAreaPlaceholder" type="Node2D" parent="."]

[node name="RoamArea" parent="RoamAreaPlaceholder" instance=ExtResource("4_ha8xt")]
scale = Vector2(0.460115, 0.481538)
collision_layer = 2048
collision_mask = 2048

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = -170.0
offset_right = -9.0
offset_bottom = -166.0
grow_horizontal = 2
scale = Vector2(2.4, 1.88)
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 3
script = ExtResource("5_75jhx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(-13.5, 23.5)
shape = SubResource("RectangleShape2D_p3opb")

[node name="DamageText" parent="." instance=ExtResource("6_4lx6o")]
position = Vector2(-1, 0)

[connection signal="body_entered" from="vision" to="vision" method="_on_body_entered"]
[connection signal="body_exited" from="vision" to="vision" method="_on_body_exited"]
[connection signal="player_entered" from="vision" to="." method="_on_agro_area_entered"]
[connection signal="player_exited" from="vision" to="." method="_on_agro_area_exited"]
[connection signal="body_entered" from="AttackBox" to="AttackBox" method="_on_body_entered"]
[connection signal="body_exited" from="AttackBox" to="AttackBox" method="_on_body_exited"]
